--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # UI/UX Enhancements
+  google_fonts: ^6.2.1              # Professional fonts (Inter, Poppins)
+  iconsax: ^0.0.8                   # Beautiful modern icons
+  flutter_animate: ^4.5.0           # Smooth animations and transitions
+  animate_do: ^3.3.4                # Pre-built animations
+
+  # Form validation and utilities
+  flutter_form_builder: ^10.2.0     # Advanced form handling
+  form_builder_validators: ^11.0.0  # Built-in validators
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
